--- a/frontend/src/plugins/buefy-theme.scss
+++ b/frontend/src/plugins/buefy-theme.scss
@@ -47,6 +47,10 @@ $navbar-item-hover-background-color: $transparent;
 $navbar-box-shadow-color: rgba(0,0,0,0.5);
 $navbar-box-shadow-size: 1px 1px 5px 0;
 
+$footer-padding: 0.3rem 1.5rem 0.3rem;
+$footer-color: true;
+$footer-background-color: $grey-darker;
+
 // https://bulma.io/documentation/form/input/#variables
 $input-background-color: $grey-light;
 $input-border-color: $grey;
