--- a/frontend/src/style/theme.scss
+++ b/frontend/src/style/theme.scss
@@ -1,16 +1,19 @@
 // Partly Taken From https://material.io/resources/color/#!/?view.left=1&view.right=1&secondary.color=DD272D&primary.color=2ca058&secondary.text.color=ffffff&primary.text.color=000000
 $primary-color: #2ca058;
-$primary-color-light: #04F21C;
+$primary-color-light: #04f21c;
 $primary-color-dark: #00702d;
 
-$secondary-color: #DD272D;
+$secondary-color: #AB2227;
 $secondary-color-light: #ff6257;
 $secondary-color-dark: #a30005;
 
+$primary-font: 'Open Sans';
+$secondary-font: 'Raleway';
 $dark-0: #131313;
-$dark-1: #282828;
-$dark-2: #333333;
-$dark-3: #555555;
+$dark-1: #1a1a1a;
+$dark-2: #282828;
+$dark-3: #333333;
+$dark-4: #555555;
 
 $light-0: #FFF;
 $light-1: #CCC;
