--- a/frontend/src/style/fonts.scss
+++ b/frontend/src/style/fonts.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,600');
