--- a/frontend/admin/src/style/theme.scss
+++ b/frontend/admin/src/style/theme.scss
@@ -4,10 +4,10 @@ $family-secondary: 'Inconsolata';
 
 $orange: #f97127;
 $turquoise: #4cb59c;
-$red: #bf2b20;
+$red: #ba4040;
 $marine: #183060;
-$grey-light: #eeeded;
-$grey-lighter: #fbfbfb;
+$grey-lighter: #eeeded;
+$grey-lightest: #fbfbfb;
 
 $first: $red;
 $first-invert: findColorInvert($first);
