- Use VueX to store the current user (not plugged with backend yet) - Add user mixin to have access to the connected user

--- a/frontend/admin/src/plugins/buefy-theme.scss
+++ b/frontend/admin/src/plugins/buefy-theme.scss
@@ -27,7 +27,7 @@ $menu-item-active-background-color: inherit;
 $label-weight: 600;
 
 $input-shadow: none;
-$input-border-color: darken($grey-light, 5%);
+$input-border-color: $grey-light;
 
 .input {
   border-width: 2px !important;
