--- a/frontend/admin/src/style/theme.scss
+++ b/frontend/admin/src/style/theme.scss
@@ -57,11 +57,6 @@ $third-invert: findColorInvert($third);
   }
 }
 
-.is-full-height {
-  height: 100%;
-}
-
-.page-content {
-  @extend .is-full-height;
-  padding: 1.5rem 3rem;
+.form {
+  margin-top: 1rem;
 }
