- Add markdown support for challenge description - Fix migrations heads

--- a/frontend/user/src/style/theme.scss
+++ b/frontend/user/src/style/theme.scss
@@ -28,3 +28,18 @@ $light-3: #777;
 /deep/ .button {
   width: 100%;
 }
+
+h1 {
+  font-size: 200%;
+  margin-bottom: 0.5rem;
+}
+
+h2 {
+  font-size: 150%;
+  margin-bottom: 0.3rem;
+}
+
+h3 {
+  font-size: 120%;
+  margin-bottom: 0.2rem;
+}
